--- a/Javascript/javascript02.html
+++ b/Javascript/javascript02.html
@@ -1,11 +1,441 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>자바스크립트 :: 데이터 불러오기</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/default.min.css">
 </head>
+
 <body>
-    
+    <header id="header">
+        <h1>
+            <a href="index.html">Javascript</a>
+        </h1>
+        <nav>
+            <ul>
+                <li><a href="javascript01.html">데이터 저장하기</a></li>
+                <li class="active"><a href="javascript02.html">데이터 불러오기</a></li>
+                <li><a href="javascript03.html">데이터 실행하기</a></li>
+                <li><a href="javascript04.html">데이터 제어하기</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- //header -->
+    <main id="main">
+        <div class="main__menu container">
+            <ul>
+                <li><a href="#">01. 변수: 데이터 불러오기</a></li>
+                <li><a href="#">02. 상수: 데이터 불러오기</a></li>
+                <li><a href="#">03. 배열: 데이터 불러오기</a></li>
+                <li><a href="#">04. 배열: 데이터 불러오기 : 갯수</a></li>
+                <li><a href="#">05. 배열: 데이터 불러오기 : for()문/a></li>
+                <li><a href="#">06. 배열: 데이터 불러오기 : forEach()</a></li>
+                <li><a href="#">07. 배열: 데이터 불러오기 : for on</a></li>
+                <li><a href="#">08. 배열: 데이터 불러오기 : for in</a></li>
+                <li><a href="#">09. 배열: 데이터 불러오기 : map()</a></li>
+                <li><a href="#">10. 배열: 데이터 불러오기 : filter()</a></li>
+                <li><a href="#">11. 배열: 데이터 불러오기 : 배열 펼침연산자</a></li>
+                <li><a href="#">12. 배열: 데이터 불러오기 : 배열 구조 분해 할당</a></li>
+                <li><a href="#">13. 객체: 데이터 불러오기 : 기본</a></li>
+                <li><a href="#">14. 객체: 데이터 불러오기 : Object.keys()</a></li>
+                <li><a href="#">15. 객체: 데이터 불러오기 : Object.values()</a></li>
+                <li><a href="#">16. 객체: 데이터 불러오기 : Object.entries()</a></li>
+                <li><a href="#">17. 객체: 데이터 불러오기 : Object.assign()</a></li>
+                <li><a href="#">18. 객체: 데이터 불러오기 : hasOwnProperty</a></li>
+                <li><a href="#">19. 객체: 데이터 불러오기 : for in</a></li>
+                <li><a href="#">20. 객체: 데이터 불러오기 : 객체 펼침연산자</a></li>
+                <li><a href="#">21. 객체: 데이터 불러오기 : 객체 구조 분해 할당</a></li>
+                <li><a href="#">22. 서버 데이터 불러오기 : XMLHttpRequest</a></li>
+                <li><a href="#">23. 서버 데이터 불러오기 : fetch API</a></li>
+            </ul>
+        </div>
+        <!-- //main__menu container -->
+        <div class="main__sample container">
+            <div id="sample01" class="sample">
+                <h3>01. 변수 : 데이터 불러오기</h3>
+                <p>
+                    이 코드는 JavaScript로 세 개의 변수를 선언하고 각각의 값을 출력합니다.
+                </p>
+                <pre><code>{
+let x = 100, y = 200, z = "javascript";
+
+console.log("01. 변수: 데이터 불러오기");
+console.log(x, y, z);
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            100<br />
+                            200<br />
+                            javascript
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample01 -->
+            <div id="sample02" class="sample">
+                <h3>02. 상수: 데이터 불러오기</h3>
+                <p>
+                    이 코드는 JavaScript로 세 개의 상수를 선언하고 각각의 값을 출력합니다.
+                </p>
+                <pre><code>{
+const x = 100, y = 200, z = "javascript";
+
+console.log("02. 상수 : 데이터 불러오기");
+console.log(x, y, z);
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            100<br />
+                            200<br />
+                            'javascript'
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample02 -->
+            <div id="sample03" class="sample">
+                <h3>03. 배열: 데이터 불러오기</h3>
+                <p>
+                    이 코드는 JavaScript로 배열을 생성하고 배열의 각 요소를 출력합니다.
+                </p>
+                <pre><code>{
+const arr = (100, 200, "javascript");
+
+console.log("03. 배열: 데이터 불러오기");
+console.log(arr[0], arr[1], arr[2]);
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            100<br />
+                            200<br />
+                            'javascript'
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample03 -->
+            <div id="sample04" class="sample">
+                <h3>04. 배열: 데이터 불러오기 : 갯수</h3>
+                <p>
+                    이 코드는 JavaScript로 배열을 생성하고, 그 배열의 길이를 출력합니다.
+                </p>
+                <pre><code>{
+const arr = (100, 200, "javascript");
+
+console.log("04. 배열: 데이터 불러오기 : 갯수");
+console.log(arr.length);
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample04 -->
+            <div id="sample05" class="sample">
+                <h3>05. 배열: 데이터 불러오기 : for()문</h3>
+                <p>
+                    이 코드는 JavaScript로 작성되었으며, 배열을 반복하면서 각 요소를 출력하는 역할을 합니다.
+                </p>
+                <pre><code>{
+const arr = [100, 200, 300, 400, 500, 600, 700, 800, 900];
+
+console.log("05. 배열: 데이터 불러오기 : for()문");
+
+for (let i = 0; i < arr.length; i++) {
+console.log(arr[i])
+}
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            100<br />
+                            200<br />
+                            300<br />
+                            400<br />
+                            500<br />
+                            600<br />
+                            700<br />
+                            800<br />
+                            900
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample05 -->
+            <div id="sample06" class="sample">
+                <h3>06. 배열: 데이터 불러오기 : forEach()</h3>
+                <p>
+                    이 코드는 JavaScript로 작성된 배열의 각 요소를 반복하면서 출력합니다. 배열에 저장된 각 값은 forEach() 메서드를 사용하여 요소를 콘솔에 출력합니다.
+                </p>
+                <pre><code>{
+const arr = [100, 200, 300, 400, 500, 600, 700, 800, 900];
+
+console.log("06. 배열: 데이터 불러오기 : forEach()");
+arr.forEach(function (element) {
+console.log(element);
+});
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            100<br />
+                            200<br />
+                            300<br />
+                            400<br />
+                            500<br />
+                            600<br />
+                            700<br />
+                            800<br />
+                            900
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample06 -->
+            <div id="sample07" class="sample">
+                <h3>07. 배열: 데이터 불러오기 : for on</h3>
+                <p>
+                    for of 반복문은 배열을 순회하면서 요소를 가져오는 작업에서 간결하고 직관적인 문법을 제공하므로 코드를 더 쉽게 이해하고 유지보수할 수 있습니다. 이는 코드의 가독성을
+                    향상시키고 실수를 줄일 수 있습니다.
+                </p>
+                <pre><code>{
+const arr = [100, 200, 300, 400, 500, 600, 700, 800, 900];
+
+console.log("07. 배열: 데이터 불러오기 : for on");
+for (let element of arr) {
+console.log(element);
+}
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            100<br />
+                            200<br />
+                            300<br />
+                            400<br />
+                            500<br />
+                            600<br />
+                            700<br />
+                            800<br />
+                            900
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample07 -->
+            <div id="sample08" class="sample">
+                <h3>08. 배열: 데이터 불러오기 : for in</h3>
+                <p>
+                    이 코드는 JavaScript로 작성된 배열을 반복하면서 각 요소를 출력합니다. 코드는 for in 반복문을 사용하여 배열의 인덱스를 순회하고, 각 인덱스를 이용하여 배열의 요소를
+                    가져와서 콘솔에 출력합니다.
+                </p>
+                <pre><code>{
+const arr = [100, 200, 300, 400, 500, 600, 700, 800, 900];
+
+console.log("08. 배열: 데이터 불러오기 : for in");
+for (let element in arr) {
+console.log(arr[element]);
+}
+
+}</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            100<br />
+                            200<br />
+                            300<br />
+                            400<br />
+                            500<br />
+                            600<br />
+                            700<br />
+                            800<br />
+                            900
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample08 -->
+            <div id="sample09" class="sample">
+                <h3>09. 배열: 데이터 불러오기 : map()</h3>
+                <p>
+                    map() 메서드를 사용하면 코드가 간결해지고 가독성이 향상됩니다.
+                    콜백 함수를 사용하여 배열의 각 요소를 변환할 수 있으므로 유연성이 높아집니다.
+                </p>
+                <pre><code>{
+const arr = [100, 200, 300, 400, 500, 600, 700, 800, 900];
+
+console.log("09. 배열: 데이터 불러오기 : map()");
+arr.map(function (element) {
+console.log(element)
+});
+</code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            100<br />
+                            200<br />
+                            300<br />
+                            400<br />
+                            500<br />
+                            600<br />
+                            700<br />
+                            800<br />
+                            900
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample09 -->
+            <div id="sample10" class="sample">
+                <h3>10. 배열: 데이터 불러오기 : filter()</h3>
+                <p>
+
+                </p>
+                <pre><code></code></pre>
+                <div class="reuslt">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- sample10 -->
+
+            <script src="assets/js/highlight.min.js"></script>
+            <script>hljs.highlightAll();</script>
+            <script>
+                //01.변수 : 데이터 불러오기
+                {
+                    let x = 100, y = 200, z = "javascript";
+                    console.log("01.변수 : 데이터 불러오기");
+                    console.log(x, y, z);
+                }
+                //02.상수 : 데이터 불러오기
+                {
+                    const x = 100, y = 200, z = "javascript";
+                    console.log("02.상수 : 데이터 불러오기");
+                    console.log(x, y, z);
+                }
+                //03.배열 : 데이터 불러오기
+                {
+                    const arr = [100, 200, "javascript"]
+                    console.log("03.배열 : 데이터 불러오기")
+                    console.log(arr[0], arr[1], arr[2])
+                }
+                //04.배열 : 데이터 불러오기: 갯수
+                {
+                    const arr = [100, 200, "javascript"]
+                    console.log("04.배열 : 데이터 불러오기: 갯수")
+                    console.log(arr.length)    //배열 안에 객체의 갯수가 총 몇개 들어있는지 확인 하는 방법
+                }
+                //05.배열 : 데이터 불러오기: for ()문    *외우기*
+                {
+                    const arr = [100, 200, 300, 400, 500, 600, 700, 800, 900];
+                    console.log("05.배열 : 데이터 불러오기: for ()문")
+                    for (let i = 0; i < arr.length; i++) {                      //초깃값; 조건식; 증감값;
+                        console.log(arr[i]);
+                    }
+                }
+                //06.배열 : 데이터 불러오기: forEach()  *외우기*
+                {
+                    const arr = [100, 200, 300, 400, 500, 600, 700, 800, 900];
+                    console.log("06.배열 : 데이터 불러오기: forEach()")
+                    //01
+                    arr.forEach(function (element) {                                   //콜백 함수
+                        console.log(element);
+                    })
+                    //02
+                    arr.forEach(function (element, index) {
+                        console.log(index);
+                    })
+                    //03
+                    arr.forEach(function (element, index, array) {
+                        console.log(array);
+                    })
+                    //화살표 함수
+                    //01
+                    arr.forEach((e) => {
+                        console.log(e);
+                    })
+                    //02
+                    arr.forEach(e => {
+                        console.log(e);
+                    })
+                    //03
+                    arr.forEach(e => console.log(e));
+                }
+                //07.배열 : 데이터 불러오기: for of
+                {
+                    const arr = [100, 200, 300, 400, 500, 600, 700, 800, 900];
+                    console.log("07.배열 : 데이터 불러오기: for of")
+                    for (let element of arr) {
+                        console.log(element);
+                    }
+                }
+                //08. 배열 : 데이터 불러오기: for in            //arr안에 배열 선언 없이 element만 입력시 키값만 불러옴(0 1 2 3 ...)
+                {
+                    const arr = [100, 200, 300, 400, 500, 600, 700, 800, 900];
+                    console.log("08. 배열 : 데이터 불러오기: for in");
+                    for (let element in arr) {
+                        console.log(arr[element]);
+                    }
+                }
+                //09. 배열: 데이터 불러오기: map()
+                {
+                    const arr = [100, 200, 300, 400, 500, 600, 700, 800, 900];
+                    //01
+                    console.log("09. 배열: 데이터 불러오기: map()");
+                    arr.map(function (element) {
+                        console.log(element)
+                    });    //[100~900]  배열안에 감싸져있는 상태로 나옴
+                    arr.map(function (element, index) {
+                        console.log(index)
+                    });
+                    arr.map(function (element, index, array) {
+                        console.log(array)
+                    });
+                }
+                // 10. 배열: 데이터 불러오기 : filter()
+                // 11. 배열: 데이터 불러오기 : 배열 펼침연산자
+                // 12. 배열: 데이터 불러오기 : 배열 구조 분해 할당
+                // 13. 객체: 데이터 불러오기 : 기본
+                // 14. 객체: 데이터 불러오기 : Object.keys()
+                // 15. 객체: 데이터 불러오기 : Object.values()
+                // 16. 객체: 데이터 불러오기 : Object.entries()
+                // 17. 객체: 데이터 불러오기 : Object.assign()
+                // 18. 객체: 데이터 불러오기 : hasOwnProperty
+                // 19. 객체: 데이터 불러오기 : for in
+                // 20. 객체: 데이터 불러오기 : 객체 펼침연산자
+                // 21. 객체: 데이터 불러오기 : 객체 구조 분해 할당
+                // 22. 서버 데이터 불러오기 : XMLHttpRequest
+                {
+
+                }
+                // 23. 서버 데이터 불러오기 : fetch API
+                {
+
+                }
+            </script>
 </body>
+
 </html>
