--- a/Javascript/test.html
+++ b/Javascript/test.html
@@ -9,6 +9,128 @@
 
 <body>
     <script>
+        // 01 선언적 함수
+        {
+            function test() {
+                console.log("01. 함수실행");
+            }
+            test();
+        }
+        // 02 익명 학수
+        {
+            const test = function () {
+                console.log("02. 함수 실행")
+            }
+            test();
+        }
+        // 03 매개변수 함수
+        {
+            function test(string) {
+                console.log(string);
+            }
+            test("03. 함수 실행");
+        }
+        // 04 리턴값 함수
+        {
+            function test() {
+                return "04. 함수 실행";
+            }
+            console.log(test());
+        }
+        // 05 매개변수 + 리턴값 함수
+        {
+            function test(string) {
+                return string;
+            }
+            console.log(test("05. 함수 실행"))
+        }
+        // 06 (화살표함수) 선언적 함수
+        {
+            test = () => {
+                console.log("06. 함수실행");
+            }
+            test();
+        }
+        // 07 (화살표함수) 익명 학수
+        {
+            const test = () => {
+                console.log("07. 함수 실행")
+            }
+            test();
+        }
+        // 08 (화살표함수) 매개변수 함수
+        {
+            test = (string) => {
+                console.log(string);
+            }
+            test("08. 함수 실행");
+        }
+        // 09 (화살표함수) 리턴값 함수
+        {
+            test = () => {
+                return "09. 함수 실행";
+            }
+            console.log(test());
+        }
+        // 10 (화살표함수) 매개변수 + 리턴값 함수
+        {
+            test = (string) => {
+                return string;
+            }
+            console.log(test("10. 함수 실행"))
+        }
+        // 11 for문
+        {
+            const arr = [1, 2, 3, , 4, 5, , 6, 7, 8, 9];
+
+            console.log(test("11. for문"))
+            for (let i = 0; i < arr.length; i++) {
+                console.log(arr[i])
+            }
+
+        }
+        // 12 forEach()
+        {
+            const arr = [1, 2, 3, , 4, 5, , 6, 7, 8, 9];
+
+            console.log(test("12. forEach"))
+            arr.forEach(function (e) {
+                console.log(e);
+            });
+        }
+        // 13 for of
+        {
+            const arr = [1, 2, 3, , 4, 5, , 6, 7, 8, 9];
+
+            console.log(test("13. for of"))
+            for (let e of arr) {
+                console.log(e);
+            }
+        }
+        // 14 for in
+        {
+            const arr = [1, 2, 3, , 4, 5, , 6, 7, 8, 9];
+
+            console.log(test("14. for in"))
+            for (let e in arr) {
+                console.log(arr[e]);
+            }
+        }
+        // 15 for map
+        {
+            const arr = [1, 2, 3, , 4, 5, , 6, 7, 8, 9];
+
+
+            console.log(test("15. for map"))
+
+            arr.map(function (e) {
+                console.log(e)
+            });
+
+        }
+
+
+
         // 01 함수 : 선언적 함수
         {
             function func() {
