--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="draggableIcon icon">
             <a href="html5/index.html" target="_blank">
                 <img src="assets/img/icon-html5.png" alt="HTML5">
-                <span>Html5</span>
+                <span>Webd</span>
             </a>
         </div>
         <div class="draggableIcon icon">
@@ -46,7 +46,7 @@
             </a>
         </div>
         <div class="draggableIcon icon">
-            <a href="githup/index.html" target="_blank">
+            <a href="https://github.com/skadbstj12/skadbstj12" target="_blank">
                 <img src="assets/img/icon-githup.png" alt="Githup">
                 <span>Githup</span>
             </a>
