--- a/Javascript/test.html
+++ b/Javascript/test.html
@@ -81,7 +81,7 @@
         }
         // 11 for문
         {
-            const arr = [1, 2, 3, , 4, 5, , 6, 7, 8, 9];
+            const arr = [1, 2, 3, 4, 5, 6, 7, 8, 9];
 
             console.log(test("11. for문"))
             for (let i = 0; i < arr.length; i++) {
@@ -91,7 +91,7 @@
         }
         // 12 forEach()
         {
-            const arr = [1, 2, 3, , 4, 5, , 6, 7, 8, 9];
+            const arr = [1, 2, 3, 4, 5, 6, 7, 8, 9];
 
             console.log(test("12. forEach"))
             arr.forEach(function (e) {
@@ -100,7 +100,7 @@
         }
         // 13 for of
         {
-            const arr = [1, 2, 3, , 4, 5, , 6, 7, 8, 9];
+            const arr = [1, 2, 3, 4, 5, 6, 7, 8, 9];
 
             console.log(test("13. for of"))
             for (let e of arr) {
@@ -109,7 +109,7 @@
         }
         // 14 for in
         {
-            const arr = [1, 2, 3, , 4, 5, , 6, 7, 8, 9];
+            const arr = [1, 2, 3, 4, 5, 6, 7, 8, 9];
 
             console.log(test("14. for in"))
             for (let e in arr) {
@@ -118,7 +118,7 @@
         }
         // 15 for map
         {
-            const arr = [1, 2, 3, , 4, 5, , 6, 7, 8, 9];
+            const arr = [1, 2, 3, 4, 5, 6, 7, 8, 9];
 
 
             console.log(test("15. for map"))
@@ -129,7 +129,7 @@
 
         }
 
-
+        clg
 
         // 01 함수 : 선언적 함수
         {
