--- a/Javascript/test3.html
+++ b/Javascript/test3.html
@@ -25,10 +25,10 @@
         }
         //03 매개
         {
-            function test2(string) {
-                console.log(string);
+            function test2(str) {
+                console.log(str);
             }
-            test2("03.매개");
+            test2("매개");
         }
         //04 리턴값
         {
