--- a/webd/cate.html
+++ b/webd/cate.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>웹디자인기능사</title>
+    <link href="https://webfontworld.github.io/goodchoice/Jalnan.css" rel="stylesheet">
     <style>
         /* 여백 초기화*/
         * {
@@ -149,12 +150,12 @@
                     <li><a href="popup.html">P-1</a></li>
                 </ul>
                 <ul>
-                    <li><a href="site-1.html">SITE-1</a></li>
-                    <li><a href="site-2.html">SITE-2</a></li>
-                    <li><a href="site-3.html">SITE-3</a></li>
-                    <li><a href="site-4.html">SITE-4</a></li>
-                    <li><a href="site-5.html">SITE-5</a></li>
-                    <li><a href="site-6.html">SITE-6</a></li>
+                    <li><a href="site-1.html">SITE1</a></li>
+                    <li><a href="site-2.html">SITE2</a></li>
+                    <li><a href="site-3.html">SITE3</a></li>
+                    <li><a href="site-4.html">SITE4</a></li>
+                    <li><a href="site-5.html">SITE5</a></li>
+                    <li><a href="site-6.html">SITE6</a></li>
                 </ul>
 
             </nav>
