--- a/Javascript/test2.html
+++ b/Javascript/test2.html
@@ -9,119 +9,59 @@
 
 <body>
     <script>
-        //01 함수
+        //선언
         {
             function test2() {
-                console.log("01.함수");
+                console.log("선언");
             }
             test2();
         }
-        //02 익명
+        //익명
         {
             const test2 = function () {
-                console.log("02.익명");
+                console.log("익명");
             }
             test2()
         }
-        //03 매개
+        //매개
         {
-            function test2(string) {
-                console.log(string);
+            function test2(str) {
+                console.log(str);
             }
-            test2("03.매개");
+            test2("매개");
         }
-        //04 리턴값
+        //리턴
         {
             function test2() {
-                return "04. 리턴값";
+                return "리턴";
             }
             console.log(test2());
         }
-        //05 매개 + 리턴값
+        //매개리턴
         {
-            function test2(string) {
-                return (string);
+            function test2(str) {
+                return (str);
             }
-            console.log(test2("05 매개 + 리턴값"));
+            console.log(test2("매개리턴값"));
         }
-        //06 (화살표) 함수
-        {
-            test2 = () => {
-                console.log("06.화살표 함수");
-            }
-            test2();
-        }
-        //07 (화살표) 익명
-        {
-            const test2 = () => {
-                console.log("07. 화살표 익명");
-            }
-            test2()
-        }
-        //08 (화살표) 매개
-        {
-            test2 = (string) => {
-                console.log(string);
-            }
-            test2("08.화살표 매개");
-        }
-        //09 (화살표) 리턴값
-        {
-            test2 = () => {
-                return "09. 화살표 리턴값";
-            }
-            console.log(test2());
-        }
-        //10 (화살표) 매개+ 리턴값
-        {
-            test2 = (string) => {
-                return (string);
-            }
-            console.log(test2("10 화살표 매개 + 리턴값"));
-        }
-        //11 for문
+        //(화살표)선언
+        //(화살표)익명
+        //(화살표)매개
+        //(화살표)리턴
+        //(화살표)매개리턴
+        //for
+        //foreach
         {
             const arr = [1, 2, 3, 4, 5, 6, 7, 8, 9];
-            console.log("05. for ()문")
-            for (let i = 0; i < arr.length; i++) {
-                console.log(arr[i]);
-            }
-        }
-        //12 forEach
-        {
-            const arr = [1, 2, 3, 4, 5, 6, 7, 8, 9];
-            console.log("06.forEach()")
+
+            console.log(test("forEach"))
             arr.forEach(function (e) {
                 console.log(e);
-            })
-
+            });
         }
-        //13 for of
-        {
-            const arr = [1, 2, 2, 4, 5, 6, 7, 8, 9];
-            console.log("07. for of")
-            for (let e of arr) {
-                console.log(e);
-            }
-        }
-        //14 for in
-        {
-            const arr = [1, 2, 3, 4, 5, 6, 7, 8, 9];
-            console.log("08. for in");
-            for (let e in arr) {
-                console.log(arr[e]);
-            }
-        }
-        //15 for map
-        {
-            const arr = [1, 2, 3, 4, 5, 6, 7, 8, 9];
-
-            console.log("09. map()");
-            arr.map(function (e) {
-                console.log(e)
-            })
-        }
-
+        //forof
+        //forin
+        //formap
     </script>
 </body>
 
