--- a/Javascript/test.html
+++ b/Javascript/test.html
@@ -129,7 +129,15 @@
 
         }
 
-        clg
+        // 16 filter
+        {
+            const arr = [1, 2, 3, 4, 5, 6, 7, 8, 9];
+            console.log(test("15. filter"))
+            arr.filter(function (e) {
+                console.log(e)
+            });
+        }
+
 
         // 01 함수 : 선언적 함수
         {
