--- a/quiz/quiz03.html
+++ b/quiz/quiz03.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>퀴즈 03</title>
     <link rel="stylesheet" href="assets/css/quiz.css">
+
+
 </head>
 
 <body>
@@ -27,14 +29,76 @@
     <!-- //header -->
 
     <main id="main">
+        <div class="quiz__wrap">
+            <div class="quiz">
+                <div class="quiz__header">
+                </div>
+                <div class="quiz__main">
+                    <div class="question">
+                    </div>
+                    <div class="choices">
+                        <label for="choice1">
+                            <input type="radio" id="choice1" name="choice" value="1">
+                            <span></span>
+                        </label>
+                        <label for="choice2">
+                            <input type="radio" id="choice2" name="choice" value="2">
+                            <span></span>
+                        </label>
+                        <label for="choice3">
+                            <input type="radio" id="choice3" name="choice" value="3">
+                            <span></span>
+                        </label>
+                        <label for="choice4">
+                            <input type="radio" id="choice4" name="choice" value="4">
+                            <span></span>
+                        </label>
 
+                    </div>
+                    <div class="answer "></div>
+                    <div class="desc "></div>
+                </div>
+                <div class="quiz__footer">
+                    <button class="confirm">정답 확인하기</button>
+                </div>
+            </div>
+        </div>
     </main>
     <!-- //main -->
 
     <footer id="footer">
-
+        <a href="mailto:nys060121@naver.com">nys060121@naver.com</a>
     </footer>
     <!-- //footer -->
+
+
+
+    <script>
+        // 선택자
+        const quizWrap = document.querySelector(".quiz__wrap");
+        const quizHeader = quizWrap.querySelector(".quiz__header");
+        const quizNum = quizWrap.querySelector(".quiz__main .question");
+        const quizQuestion = quizWrap.querySelector(".quiz__main .question");
+        const quizChoices = quizWrap.querySelector(".quiz__main .choices");
+        const quizAnswer = quizWrap.querySelector(".quiz__main .answer");
+        const quizDesc = quizWrap.querySelector(".quiz__main .desc");
+        const quizConfirm = quizWrap.querySelector(".quiz__footer .confirm");
+
+        // 문제 정보
+        const quizInfo = {
+            date: "2021년 3회",
+            type: "정보처리기능사",
+            num: "01",
+            question: "명령어 형식(instruction format)에서 첫 번째 바이트에 기억되는 것은?",
+            choices: ["operand", "length", "question mark", "opcode"],
+            answer: "opcode",
+            desc: "명령어의 구성명령어 코드부 + 주소부 (한글),<br> OP-code + Operand (영문)"
+        }
+
+        // 문제 출력
+        quizHeader.innerHTML = quizInfo.date + " " + quizInfo.type;
+        quizQuestion.innerHTML = quizInfo.num + " " + quizInfo.question;
+    </script>
 </body>
 
 </html>
