--- a/Javascript/test4.html
+++ b/Javascript/test4.html
@@ -9,7 +9,13 @@
 
 <body>
     <script>
+        {
+            const arr = [1, 2, 3, 4, 5, 6, 7, 8, 9];
 
+            arr.map(function (e) {
+                console.log(e)
+            })
+        }
     </script>
 </body>
 
